# iit-frankapanda-ros-pkg

./: .gitignore  CMakeLists.txt  README.md
franka_description/: CMakeLists.txt  README.md
franka_description/config/: franka_control_node.yaml  panda_controllers.yaml  panda_moveit_controllers.yaml
franka_description/launch/: panda_original.launch  panda_with_base_gazebo.launch  panda_with_base_real.launch
franka_description/robots/common/: franka_robot.xacro  utils.xacro
franka_description/robots/panda/: joint_limits.yaml  panda_with_base.urdf.xacro
franka_description/robots/srdf/: arm.xacro  panda.srdf.xacro
frankapanda_cartesio/: CMakeLists.txt  package.xml
frankapanda_cartesio/config/: frankapanda_cartesio.rviz  frankapanda_simple_stack.yaml
frankapanda_cartesio/launch/: frankapanda_cartesio.launch
frankapanda_cartesio/src/: demo.py
frankapanda_config/: CMakeLists.txt  frankapanda_basic.yaml  package.xml
frankapanda_config/conf/: frankapanda_basic.yaml  frankapanda_impedance_config.yaml
frankapanda_config/hal/: frankapanda_dummy.yaml  frankapanda_gz.yaml
frankapanda_gazebo/: CMakeLists.txt  package.xml
frankapanda_gazebo/launch/: frankapanda.launch.py  frankapanda_world.launch  frankapanda_world_table.launch
frankapanda_gazebo/scripts/: pub_robot_description
frankapanda_gazebo/worlds/: frankapanda.world
frankapanda_srdf/: CMakeLists.txt  package.xml
frankapanda_srdf/srdf/: panda.srdf.xacro
frankapanda_urdf/: CMakeLists.txt  package.xml
frankapanda_urdf/config/: frankapanda.rviz  frankapanda.urdf.xacro  frankapanda_table.rviz
frankapanda_urdf/launch/: frankapanda.launch  frankapanda_rviz.launch
frankapanda_urdf/meshes/visual/: ce0327_iso-adapter.stl
frankapanda_urdf/urdf/: panda.gv  panda.urdf.xacro  try.urdf  tryGaz.urdf
frankapanda_urdf/urdf/common/: franka_arm.xacro  franka_hand.xacro  franka_robot.xacro  hand_standalone.urdf.xacro  utils.xacro  xbot.gazebo.xacro
(+1 files in other folders)
