<?xml version="1.0"?>
<package format="2">
  <name>frankapanda_config</name>
  <version>0.0.0</version>
  <description>The frankapanda_config package</description>
  <maintainer email="davide.torielli@iit.it">Tori</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
