<?xml version="1.0"?>
<package format="2">
  <name>frankapanda_srdf</name>
  <version>0.0.0</version>
  <description>The inail2frankapanda_srdfarm_srdf package</description>

  <maintainer email="davide.torielli@iit.iit">Davide Torielli</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>srdfdom</depend>
  <depend>urdf</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
